<resources>
    <string name="app_name">All About Women</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">All About Women</string>
    <string name="nav_header_subtitle">support@allaboutwomen.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_women_circle">Women Circle</string>
    <string name="menu_contraception">Contraception</string>
    <string name="previousMonthButton"><![CDATA[<-]]></string>
    <string name="nextMonthButton"><![CDATA[->]]></string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="default_date">Month YYYY</string>
    <string name="one_number">1</string>
    <string name="ret_cur_date">Return to \nCurrent Date</string>
    <string name="cl_dt">Clean Dates</string>
    <string name="conf">Confirm</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
</resources>