<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.women_circle.WomenCircleActivity"
    android:orientation="vertical"
    android:background="@drawable/gradient_color">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/previousMonthButton"
            android:textColor="@color/black"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:textStyle="bold"
            android:onClick="previousMonthAction"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/monthYearTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/default_date"
            android:textAlignment="center"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nextMonthButton"
            android:textColor="@color/black"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:textStyle="bold"
            android:onClick="nextMonthAction"
            android:textSize="20sp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sun"
            android:textColor="@color/WomensCircleWhite"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mon"
            android:textAlignment="center"
            android:textColor="@color/WomensCircleWhite"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tue"
            android:textAlignment="center"
            android:textColor="@color/WomensCircleWhite"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wed"
            android:textAlignment="center"
            android:textColor="@color/WomensCircleWhite"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/thu"
            android:textAlignment="center"
            android:textColor="@color/WomensCircleWhite"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fri"
            android:textAlignment="center"
            android:textColor="@color/WomensCircleWhite"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sat"
            android:textAlignment="center"
            android:textColor="@color/WomensCircleWhite"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calendarRecycleView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:clickable="false"
        android:outlineSpotShadowColor="@color/black" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">

        <EditText
            android:id="@+id/editTextDate2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="DD/MM/YYYY"
            android:clickable="false"
            android:ems="8"
            android:hint="@string/dd_mm_yyyy"
            android:inputType="date"
            android:longClickable="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/return_toDate"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/editTextDate3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="DD/MM/YYYY"
            android:clickable="false"
            android:ems="8"
            android:hint="@string/dd_mm_yyyy"
            android:inputType="date"
            android:longClickable="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/clear_dates"
            app:layout_constraintTop_toBottomOf="@+id/editTextDate2" />

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/conf"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextDate3" />

        <Button
            android:id="@+id/return_toDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ret_cur_date"
            app:layout_constraintLeft_toRightOf="@id/editTextDate2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/clear_dates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cl_dt"
            app:layout_constraintStart_toStartOf="@id/return_toDate"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/return_toDate" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>